--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -10,5 +10,24 @@
   .panel-body
     = f.input :title, input_html: { class: 'form-control' }
     = f.input :description, input_html: { class: 'form-control' }
+    = f.input :image, input_html: { class: 'form-control' }
+
+    .row
+      .col-md-6
+        %h3 Ingredients
+        #ingredients
+          = f.simple_fields_for :ingredients do |ingredient|
+            = render 'ingredients_fields', f: ingredient
+          .link
+            = link_to_add_association 'Add Ingredient', f, :ingredients, class: "btn btn-default add-button"
+
+      .col-md-6
+        %h3 Directions
+        #directions
+          = f.simple_fields_for :directions do |direction|
+            = render 'direction_fields', f: direction
+          .links
+            = link_to_add_association 'Add Step', f, :directions, class: " btn btn-default add-button"
+
 
   = f.button :submit, class: "btn btn-primary"
