added nested forms for recipeies

--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -18,7 +18,7 @@
         #ingredients
           = f.simple_fields_for :ingredients do |ingredient|
             = render 'ingredients_fields', f: ingredient
-          .link
+          .links
             = link_to_add_association 'Add Ingredient', f, :ingredients, class: "btn btn-default add-button"
 
       .col-md-6
