finished adding user controls and layout of html

--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -1,7 +1,7 @@
 .main_content
   #recipe_top.row
     .col-md-4
-      - image_tag @ recipe @recipe.image.url(:medium), class: "recipe_image"
+      - image_tag @recipe.image.url(:medium), class: "recipe_image"
     .col-md-8
       #recipe_info
         %h1= @recipe.title
@@ -27,6 +27,7 @@
   .row
     .col-md-12
       = link_to "Back", root_path, class: "btn btn-default"
-      = link_to "Edit", edit_recipe_path, class: "btn btn-default"
-      = link_to "Delete", recipe_path, method: :delete, data: {confirm: "Are you sure?" }, class: "btn btn-default"
+      - if user_signed_in?
+        = link_to "Edit", edit_recipe_path, class: "btn btn-default"
+        = link_to "Delete", recipe_path, method: :delete, data: {confirm: "Are you sure?" }, class: "btn btn-default"
        
