fixes with Chrises assistance

--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -17,7 +17,7 @@
         %h3 Ingredients
         #ingredients
           = f.simple_fields_for :ingredients do |ingredient|
-            = render 'ingredients_fields', f: ingredient
+            = render 'ingredient_fields', f: ingredient
           .links
             = link_to_add_association 'Add Ingredient', f, :ingredients, class: "btn btn-default add-button"
 
