--- a/app/views/recipes/index.html.haml
+++ b/app/views/recipes/index.html.haml
@@ -1,6 +1,6 @@
 - @recipe.each_slice(3) do |recipes|
   .row
-    - recipes.each do |redipe|
+    - recipes.each do |recipe|
       .col-md-4
         .recipe
           .image_wrapper
